flask-testing (0.4.2-2) UNRELEASED; urgency=medium

  * d/control: Set Vcs-* to salsa.debian.org
  * d/copyright: Use https protocol in Format field
  * d/control: Deprecating priority extra as per policy 4.0.1

 -- Ondřej Nový <onovy@debian.org>  Tue, 13 Feb 2018 10:16:21 +0100

flask-testing (0.4.2-1) unstable; urgency=low

  * Initial release (Closes: #807054).

 -- Nicolas Dandrimont <olasd@debian.org>  Wed, 20 Apr 2016 13:30:34 +0200