@@ -1,11 +1,0 @@
-# see git-dpm(1) from git-dpm package
-30ff1076b5a37f57ffca223c009d19bbbeeb7c0f
-30ff1076b5a37f57ffca223c009d19bbbeeb7c0f
-940754193c5e07728e2d3a66b26a17a32fc2d200
-940754193c5e07728e2d3a66b26a17a32fc2d200
-flask-testing_0.4.2.orig.tar.gz
-0ef17abac8fc8fac1da3fc4786c289bae4608c32
-40994
-debianTag="debian/%e%v"
-patchedTag="patched/%e%v"
-upstreamTag="upstream/%e%u"
