@@ -3,6 +3,7 @@ flask-testing (0.4.2-2) UNRELEASED; urgency=medium
   * d/control: Set Vcs-* to salsa.debian.org
   * d/copyright: Use https protocol in Format field
   * d/control: Deprecating priority extra as per policy 4.0.1
+  * Convert git repository from git-dpm to gbp layout
 
  -- Ondřej Nový <onovy@debian.org>  Tue, 13 Feb 2018 10:16:21 +0100
 
